examples/test/testpolicy16493.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16493
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key30: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value6
          key9: value44
      podSelector:
        matchLabels:
          key7: value25
          key32: value41
          key0: value38
